--- a/Portfolio/Pages/Shared/_LoginPartial.cshtml
+++ b/Portfolio/Pages/Shared/_LoginPartial.cshtml
@@ -6,14 +6,17 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <li class="nav-item dropdown">
+        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" >@User.Identity?.Name!</button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <li><a class="dropdown-item" asp-page="/Account/Index">Profile</a></li>
+            <li><a class="dropdown-item" asp-page="/Account/Manage/Index">Manage Profile</a></li>
+                <form class="dropdown-item" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+                    <button type="submit" class="dropdown-item">Logout</button>
+                </form>
+        </ul>
     </li>
-    <li class="nav-item">
-        <form class="form-inline" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
+    
 }
 else
 {
