--- a/Portfolio/Pages/Shared/_LoginPartial.cshtml
+++ b/Portfolio/Pages/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
             <li><a class="dropdown-item" asp-page="/Account/Index">Profile</a></li>
             <li><a class="dropdown-item" asp-page="/Account/Manage/Index">Manage Profile</a></li>
                 <form class="dropdown-item" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-                    <button type="submit" class="dropdown-item">Logout</button>
+                    <button type="submit" class="nav-link dropdown-item">Logout</button>
                 </form>
         </ul>
     </li>
