--- a/Portfolio/Pages/SubjectManager/Index.cshtml
+++ b/Portfolio/Pages/SubjectManager/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h4>Subjects</h4>
 
-<a asp-page="CreateSubject">Add</a>
+<a class="btn btn-success" asp-page="CreateSubject">Add</a>
 
 @foreach(var sub in Model.Subjects)
 {
@@ -14,7 +14,7 @@
             <td>Name</td>
         </tr>
         <tr>
-            <td>@sub.Name</td>
+            <td><a asp-page="Subject" asp-route-id="@sub.Id">@sub.Name</a></td>
         </tr>
     </table>
 }
