--- a/Portfolio/Pages/Shared/_Layout.cshtml
+++ b/Portfolio/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
+                    <partial name="_SubjectManagerPartial" />
                 </div>
             </div>
         </nav>
