--- a/Portfolio/Pages/SubjectManager/Subject.cshtml
+++ b/Portfolio/Pages/SubjectManager/Subject.cshtml
@@ -9,5 +9,6 @@
     {
         <p>@lab.Name</p>
     }
-    <a asp-page="LabWorksManager/CreateLabWork">Add Lab Works</a>
+    <a asp-page="Update" asp-route-id="@Model.Subject.Id" class="btn">Update</a>
+    <form method="post" asp-page-handler="Delete"><button class="btn btn-danger">Delete</button></form>
 </div>
