--- a/Portfolio/Pages/SubjectManager/CreateSubject.cshtml
+++ b/Portfolio/Pages/SubjectManager/CreateSubject.cshtml
@@ -4,9 +4,9 @@
 }
 <div class="container">
     <form method="post" class="form-control">
-        <label class="form-label" asp-for="SubjectDto.Name"></label>
+        <label class="form-label" asp-for="SubjectVM.Name"></label>
         <br />
-        <input asp-for="SubjectDto.Name" />
+        <input asp-for="SubjectVM.Name" />
         <br />
         <button class="btn btn-primary">Submit</button>
     </form>
