--- a/Portfolio/Pages/SubjectManager/LabWorksManager/CreateLabWork.cshtml
+++ b/Portfolio/Pages/SubjectManager/LabWorksManager/CreateLabWork.cshtml
@@ -10,13 +10,13 @@
         <select asp-items="Model.Subjects" asp-for="SubjectId">
         </select>
         <br />
-        <label asp-for="LabWorkDto.Name"></label>
+        <label asp-for="LabWorkVM.Name"></label>
         <br />
-        <input asp-for="LabWorkDto.Name"/>
+        <input asp-for="LabWorkVM.Name" />
         <br />
-        <label asp-for="LabWorkDto.Completed"></label>
+        <label asp-for="LabWorkVM.Completed"></label>
         <br />
-        <input asp-for="LabWorkDto.Completed" />
+        <input asp-for="LabWorkVM.Completed" />
         <br />
         <button class="btn btn-primary">Submit</button>
     </form>
