--- a/Portfolio/Pages/SubjectManager/LabWorksManager/Index.cshtml
+++ b/Portfolio/Pages/SubjectManager/LabWorksManager/Index.cshtml
@@ -3,7 +3,14 @@
 @{
 }
 
-@foreach (var i in Model.LabWorkVM)
+@foreach (var lab in Model.LabWorkVM)
 {
-    <a asp-page="LabWork" asp-route-id="@i.Id">@i.Name</a>
+    <table>
+        <tr>
+            <td>Name</td>
+        </tr>
+        <tr>
+            <td><a asp-page="LabWork" asp-route-id="@lab.Id">@lab.Name</a></td>
+        </tr>
+    </table>
 }
