fixed bugs and did some adjustments

--- a/Portfolio/Pages/SubjectManager/LabWorksManager/CreateLabWork.cshtml
+++ b/Portfolio/Pages/SubjectManager/LabWorksManager/CreateLabWork.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <form method="post">
         <label>Select Subject</label>
-        <select asp-items="Model.Subjects" asp-for="SubjectId">
+        <select asp-items="Model.Subjects" asp-for="LabWorkVM.SubjectId">
         </select>
         <br />
         <label asp-for="LabWorkVM.Name"></label>
