changed folder structure

--- a/Portfolio/Pages/LabWorksManager/CreateLabWork.cshtml
+++ b/Portfolio/Pages/LabWorksManager/CreateLabWork.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Portfolio.Pages.SubjectManager.LabWorksManager.CreateLabWorkModel
+@model Portfolio.Pages.LabWorksManager.CreateLabWorkModel
 @{
 }
 
