--- a/Portfolio/Pages/LabWorksManager/LabWork.cshtml
+++ b/Portfolio/Pages/LabWorksManager/LabWork.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model Portfolio.Pages.SubjectManager.LabWorksManager.LabWorkModel
+@model Portfolio.Pages.LabWorksManager.LabWorkModel
 @{
     var lab = Model.LabWorkVM;
 }
