--- a/Portfolio/Pages/LabWorksManager/Update.cshtml
+++ b/Portfolio/Pages/LabWorksManager/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Portfolio.Pages.SubjectManager.LabWorksManager.UpdateModel
+@model Portfolio.Pages.LabWorksManager.UpdateModel
 @{
 }
 
