--- a/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
+++ b/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
@@ -16,8 +16,8 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <li><a class="dropdown-item" asp-page="/SubjectManager/Index">Subjects</a></li>
                 <li><a class="dropdown-item" asp-page="/SubjectManager/CreateSubject">Create Subject</a></li>
-                <li><a class="dropdown-item" asp-page="/SubjectManager/LabWorksManager/Index">Lab-Works</a></li>
-                <li><a class="dropdown-item" asp-page="/SubjectManager/LabWorksManager/CreateLabWork">Create Lab-Work</a></li>
+                <li><a class="dropdown-item" asp-page="/LabWorksManager/Index">Lab-Works</a></li>
+                <li><a class="dropdown-item" asp-page="/LabWorksManager/CreateLabWork">Create Lab-Work</a></li>
 
 
             </ul>
