--- a/Portfolio/Pages/SubjectManager/Subject.cshtml
+++ b/Portfolio/Pages/SubjectManager/Subject.cshtml
@@ -7,7 +7,7 @@
     <h5>@Model.SubjectVM.Name</h5>
     @foreach (var lab in Model.SubjectVM.LabWorks)
     {
-        <p>@lab.Name</p>
+        <a asp-page="/LabWorksManager/LabWork" asp-route-id="@lab.Id">@lab.Name</a>
     }
     <a asp-page="Update" asp-route-id="@Model.SubjectVM.Id" class="btn">Update</a>
     <form method="post" asp-page-handler="Delete"><button class="btn btn-danger">Delete</button></form>
