--- a/Portfolio/Pages/LabWorksManager/Index.cshtml
+++ b/Portfolio/Pages/LabWorksManager/Index.cshtml
@@ -8,7 +8,7 @@
 {
     <table>
         <tr>
-            <td>Name</td>
+            <th>Name</th>
         </tr>
         <tr>
             <td><a asp-page="LabWork" asp-route-id="@lab.Id">@lab.Name</a></td>
