--- a/Portfolio/Pages/SubjectManager/Index.cshtml
+++ b/Portfolio/Pages/SubjectManager/Index.cshtml
@@ -11,7 +11,7 @@
 {
     <table>
         <tr>
-            <td>Name</td>
+            <th>Name</th>
         </tr>
         <tr>
             <td><a asp-page="Subject" asp-route-id="@sub.Id">@sub.Name</a></td>
