--- a/Portfolio/Pages/ClassManager/Index.cshtml
+++ b/Portfolio/Pages/ClassManager/Index.cshtml
@@ -2,3 +2,15 @@
 @model Portfolio.Pages.ClassManager.IndexModel
 @{
 }
+
+@foreach(var cls in Model.Classes)
+{
+    <table>
+        <tr>
+            <th>Name</th>
+        </tr>
+        <tr>
+            <td><a asp-page="Class" asp-route-id="@cls.Id">@cls.Name</a></td>
+        </tr>
+    </table>
+}
