--- a/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
+++ b/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
@@ -15,7 +15,7 @@
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Manage Subject</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <li><a class="dropdown-item" asp-page="/SubjectManager/CreateSubject">Create Subject</a></li>
-                <li><a class="dropdown-item" asp-page="/SubjectManager/Index"></a></li>
+                <li><a class="dropdown-item" asp-page="/SubjectManager/Index">Subjects</a></li>
                 <li><a class="dropdown-item" asp-page="/LabWorksManager/Index">Lab-Works</a></li>
                 <li><a class="dropdown-item" asp-page="/LabWorksManager/CreateLabWork">Create Lab-Work</a></li>
                 <li><a class="dropdown-item" asp-page="/ClassManager/Index">Classes</a></li>
