--- a/Portfolio/Pages/SubjectManager/CreateSubject.cshtml
+++ b/Portfolio/Pages/SubjectManager/CreateSubject.cshtml
@@ -8,6 +8,9 @@
         <br />
         <input asp-for="SubjectVM.Name" />
         <br />
+        <select asp-items="@Model.LabList" asp-for="LabWorkIds">
+            <option></option>
+        </select>
         <button class="btn btn-primary">Submit</button>
     </form>
 </div>
