--- a/Portfolio/Pages/ClassManager/Class.cshtml
+++ b/Portfolio/Pages/ClassManager/Class.cshtml
@@ -20,4 +20,9 @@
         <a class="" asp-route-id="@std.Id">@std.UserName</a>
         <br />
     }
+    <a class="btn" asp-page="Update">Update</a>
+    <br />
+    <form method="post" asp-page-handler="Delete">
+        <button class="btn btn-danger">Delete</button>
+    </form>
 </div>
