--- a/Portfolio/Pages/SubjectManager/Update.cshtml
+++ b/Portfolio/Pages/SubjectManager/Update.cshtml
@@ -12,4 +12,5 @@
         <br />
         <button class="btn btn-primary">Submit</button>
     </form>
+    <form method="post" asp-page-handler="Delete"><button class="btn btn-danger">Delete</button></form>
 </div>
