--- a/Portfolio/Pages/ClassManager/Update.cshtml
+++ b/Portfolio/Pages/ClassManager/Update.cshtml
@@ -3,3 +3,9 @@
 @{
 }
 
+<form method="post" class="form-control">
+    <label class="form-control" asp-for="ClassVM.Name"></label>
+    <input asp-for="ClassVM.Name" class="form-control" />
+    <br />
+    
+</form>
