nedd change update pages in classmanager.

--- a/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
+++ b/Portfolio/Pages/Shared/_SubjectManagerPartial.cshtml
@@ -20,6 +20,7 @@
                 <li><a class="dropdown-item" asp-page="/LabWorksManager/Index">Lab-Works</a></li>
                 <li><a class="dropdown-item" asp-page="/LabWorksManager/CreateLabWork">Create Lab-Work</a></li>
                 <li><a class="dropdown-item" asp-page="/ClassManager/Index">Classes</a></li>
+                <li><a class="dropdown-item" asp-page="/ClassManager/Create">Create Class</a></li>
 
             </ul>
         </li>
