--- a/Portfolio/Pages/ClassManager/Update.cshtml
+++ b/Portfolio/Pages/ClassManager/Update.cshtml
@@ -4,29 +4,37 @@
 @model Portfolio.Pages.ClassManager.UpdateModel
 @{
     var subjects = Model.ClassVM.Subjects;
+    var users = Model.ClassVM.Students;
 }
 
 <form method="post" class="form-control">
-    <label asp-for="ClassVM.Id"></label>
-    <input asp-for="ClassVM.Id" readonly/>
-    <label class="form-control" asp-for="ClassVM.Name"></label>
+    <input asp-for="ClassVM.Id" readonly hidden/>
+    <label class="form-control mb-1" asp-for="ClassVM.Name"></label>
     <input asp-for="ClassVM.Name" class="form-control" />
     <br />
-    @if(subjects != null)
+    
+    @for (int i = 0; i < subjects.Count; i++)
     {
-        @for (int i = 0; i < subjects.Count; i++)
-        {
-            <a class="" asp-page="/SubjectManager/Subject" asp-route-id="@subjects[i].Id">@subjects[i].Name</a>
-            <input value="@subjects[i].Id" asp-for="SubjectChecks[i].subId" readonly hidden/>
-            <input type="checkbox" checked asp-for="SubjectChecks[i].checkedSub" />
-            <br />
-        }
+        <a class="" asp-page="/SubjectManager/Subject" asp-route-id="@subjects[i].Id">@subjects[i].Name</a>
+        <input class="form-control" value="@subjects[i].Id" asp-for="SubjectChecks[i].subId" readonly hidden />
+        <input type="checkbox"  checked asp-for="SubjectChecks[i].checkedSub" />
+        <br />
     }
-    <select asp-items="Model.SubjectsList" asp-for="SubjectIds">
+    
+    @for(int i = 0; i < users.Count; i++)
+    {
+        <a class="" asp-page="/Account/Index" asp-route-id="@users[i].Id">@users[i].UserName</a>
+        <input class="form-control" value="@users[i].Id" asp-for="UserCheck[i].userId" readonly hidden />
+        <input type="checkbox" checked asp-for="UserCheck[i].checkedUser" />
+        <br />
+    }
+    <h5>Subjects</h5>
+    <select class="form-control" asp-items="Model.SubjectsList" asp-for="SubjectIds">
         <option></option>
     </select>
     <br />
-    <select asp-items="Model.UsersList" asp-for="UsersIds">
+    <h5>Students</h5>
+    <select class="form-control" asp-items="Model.UsersList" asp-for="UsersIds">
         <option></option>
     </select>
     <br />
