change folder structure 1

--- a/Portfolio/Pages/Manage/Class/Class.cshtml
+++ b/Portfolio/Pages/Manage/Class/Class.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model Portfolio.Pages.ClassManager.ClassModel
+@model Portfolio.Pages.Manage.Class.ClassModel
 @{
     var cls = Model.ClassVM;
     var clsSubjects = cls.Subjects;
