--- a/Portfolio/Pages/Manage/Class/Update.cshtml
+++ b/Portfolio/Pages/Manage/Class/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @using Portfolio.Entities
 @using Portfolio.Models.Subject
-@model Portfolio.Pages.ClassManager.UpdateModel
+@model Portfolio.Pages.Manage.Class.UpdateModel
 
 
 <div class="container">
