--- a/Portfolio/Pages/Manage/LabWork/LabWork.cshtml
+++ b/Portfolio/Pages/Manage/LabWork/LabWork.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model Portfolio.Pages.LabWorksManager.LabWorkModel
+@model Portfolio.Pages.Manage.LabWorks.LabWorkModel
 @{
     var lab = Model.LabWorkVM;
 }
