change folder structure 2 need to fix bug in class create

--- a/Portfolio/Pages/Manage/LabWork/Index.cshtml
+++ b/Portfolio/Pages/Manage/LabWork/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
-@model Portfolio.Pages.Manage.LabWorks.IndexModel
+@model             IndexModel
 @{
 }
 
-<a asp-page="CreateLabWork" class="btn">Add Lab-Work</a>
+<a asp-page="Create" class="btn">Add Lab-Work</a>
 @foreach (var lab in Model.LabWorkVM)
 {
     <table>
